--- a/index.html
+++ b/index.html
@@ -354,9 +354,9 @@ Sprawdź naszą ofertę.
 </div>
 <div id="right-side">
 <video muted autoplay>
-<source src="videos/logo.webm" type="video/webm">
+<source src="images/homepage" type="vapelogo.png">
 </video>
-<img src="images/static-logo.png" alt="cheapvape Logo">
+<img src="images/homepage/vapelogo.png" alt="vapelogo.png">
 </div>
 </div>
 </div>
@@ -365,10 +365,10 @@ Sprawdź naszą ofertę.
 <div>
 <div class="container-fluid">
 <div style="text-shadow: 2px 2px 4px #000000; color: white; text-align: center; white-space: nowrap; font-family: Poppins; font-style: normal; font-weight: normal; font-size: 36px; letter-spacing: 0.72px;">
-tekst0<br>
+Czym jest vape?<br>
 <div style="font-weight: lighter; font-size: 24px; color: rgba(223,223,223,1); letter-spacing: 0.55px;">
-tekst1<br>
-tekst2	<br> </div>
+VAPE To niewykrywalny cheat, którego możesz używac na clientach typu: LunarClient<br>
+<br> </div>
 </div>
 <div class="row">
 <div class="col-lg-6">
@@ -383,8 +383,8 @@ tekst2	<br> </div>
 </svg>
 <svg class="Rectangle_81_bo">
 <linearGradient id="Rectangle_81_bo" spreadMethod="pad" x1="-0.034" x2="0.703" y1="2.542" y2="-1.239">
-<stop offset="0" stop-color="#00142c" stop-opacity="1"></stop>
-<stop offset="1" stop-color="#030516" stop-opacity="1"></stop>
+<stop offset="0" stop-color="#4a077a" stop-opacity="1"></stop>
+<stop offset="1" stop-color="#4a077a" stop-opacity="1"></stop>
 </linearGradient>
 <rect id="Rectangle_81_bo" rx="4" ry="4" x="0" y="0" width="710" height="100">
 </rect>
@@ -393,10 +393,10 @@ tekst2	<br> </div>
 <span>tekst4</span>
 </div>
 <div id="Mnstwo_ustawie_i_opcji_Macro_n">
-<span>Mnóstwo ustawień i opcji. Macro na prawy i <br />lewy przycisk. Clicker na kopanie. Nie wykrywalny<br />podczas sprawdzania przez administrację. </span>
+<span>Like steroids for Minecraft.<br /> Vape includes the highest quality Minecraft ghost client<br />features, and will assure that you dominate every opponent!</span>
 </div>
 <div id="Group_24">
-<button class="left-blue-button" id="left-blue-button" onclick="gotoBuy()">kupno</button>
+<button class="left-blue-button" id="left-blue-button" onclick="gotoBuy()">Get NOW!</button>
 </div></div>
 <div id="Group_25">
 
@@ -476,33 +476,18 @@ tekst2	<br> </div>
 <div class="col-sm-12 mt-3">
 <div class="row p-0 d-flex" id="social-container">
 <div class=" text-center">
-<a href="https://www.facebook.com/cheapvapePL-Najlepsze-macro-w-Polsce-102391928317248" target="_blank">
-<img width="38" height="38" class="d-block mx-auto" src="images/homepage/fb_ee.png" alt="FB Icon">
-<p class="white-text">Facebook</p>
+
 </a>
 </div>
 <div class=" text-center">
-<a href="https://discord.gg/ZMxu9tA4KW" target="_blank">
+<a href="https://discord.gg/AdmZb7HeDK" target="_blank">
 <img width="38" height="38" class="d-block mx-auto" src="images/homepage/dc_ek.png" alt="DC Icon">
 <p class="white-text">Discord</p>
 </a>
 </div>
 <div class=" text-center">
-<a href="https://www.instagram.com/maltixon" target="_blank">
-<img width="38" height="38" class="d-block mx-auto" src="images/homepage/ig.png" alt="IG Icon">
-<p class="white-text">Instagram</p>
-</a>
-</div>
-</div>
-</div>
-</div>
-<div class="col-sm-4">
-<div id="footer-links" class="desktop-block-view">
-<a href="index.html" class="footer-link">Strong główna</a>
-<a href="kontakt.html" class="footer-link">Kontakt</a>
-<a href="regulamin.html" class="footer-link">Regulamin</a>
-<a href="polityka-prywatnosci.html" class="footer-link">Polityka Prywatności</a>
-<a href="login.html" class="footer-link uziblue-link">Zaloguj się</a>
+
+
 </div>
 <div id="footer-links" class="mobile-block-view text-center">
 <a href="regulamin.html" class="footer-link">Regulamin</a>
@@ -510,7 +495,7 @@ tekst2	<br> </div>
 </div>
 </div>
 <div class="col-lg-12 text-center white-text mt-4 mb-3">
-<p class="fs-12 m-0"><span class="uziblue-description">© <span id="year"></span> - cheapvape.pl</span> | Wszelkie prawa zastrzeżone.</p>
+<p class="fs-12 m-0"><span class="uziblue-description">© <span id="year"></span> - cheapvape.xyz</span> | Wszelkie prawa zastrzeżone.</p>
 </div>
 </div>
 </div>
